<resources>
    <string name="app_name">MyFootballMatch</string>
    <string name="home_menu_title">Home</string>
    <string name="team_menu_title">Team</string>
    <string name="search_menu_title">Search</string>
    <string name="profile_menu_title">Profile</string>
    <string name="email_placeholder">ex. user@gmail.com</string>
    <string name="under_development_text">Under Development</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="lose">Lose</string>
    <string name="win_32">32</string>
    <string name="match_played">Match Played</string>
    <string name="home">Home</string>
    <string name="_46">46</string>
    <string name="away">Away</string>
    <string name="goal_statistic">Goal Statistic</string>
    <string name="goal_average">Goal Average</string>
    <string name="logout">Logout</string>
    <string name="premier_league">Premier League</string>
    <string name="manchester_united">Manchester United</string>
    <string name="statistic_team">Statistic Team</string>
    <string name="gd">GD</string>
    <string name="pts">Pts</string>
    <string name="team">Team</string>
    <string name="p">P</string>
    <string name="pos">Pos</string>
    <string name="league_table">League Table</string>
    <string name="matchweek">Matchweek</string>
    <string name="dream">Dream</string>
    <string name="welcome_to">Welcome to</string>
    <string name="football">Football</string>
    <string name="top_scorer">Top Scorer</string>
    <string name="unknown_league">Unknown League</string>
    <string name="profile">Profile</string>
    <string name="btn_continue_title">Continue</string>
    <string name="password_hint_text">********</string>
    <string name="password_title">Password</string>
    <string name="username_hint">ex. @john</string>
    <string name="username_title">Username</string>
    <string name="name_hint_text">ex. John Doe</string>
    <string name="name_title">Name</string>
    <string name="register_your_account">Register your Account</string>
    <string name="back_button_text">Back</string>
    <string name="find_other_team_search">Find other team</string>
</resources>
