<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeActivity"
    android:id="@+id/scroll_daily"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.register.RegisterActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="@dimen/dimen32"
        android:layout_height="@dimen/dimen32"
        android:background="@drawable/ic_back"
        android:layout_marginLeft="@dimen/dimen24"
        android:layout_marginTop="@dimen/dimen40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/dimen24" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/back_button_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font12"
        android:layout_marginTop="@dimen/dimen45"
        android:layout_marginLeft="@dimen/dimen4"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/dimen4" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen24"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register_your_account"
        android:textSize="@dimen/font20"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="@dimen/dimen24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        android:layout_marginStart="@dimen/dimen24" />

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/name_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font13"
        android:layout_marginTop="@dimen/dimen32"
        android:layout_marginLeft="@dimen/dimen24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
        android:layout_marginStart="@dimen/dimen24" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="@dimen/dimen312"
        android:layout_height="@dimen/dimen48"
        android:layout_marginTop="@dimen/dimen8"
        android:background="@drawable/edit_text_border_background"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginLeft="@dimen/dimen24"
        android:layout_marginRight="@dimen/dimen24"
        android:hint="@string/name_hint_text"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/dimen14"
        android:paddingLeft="@dimen/dimen14"
        android:paddingTop="@dimen/dimen14"
        android:paddingBottom="@dimen/dimen14"
        android:textColor="@color/colorBlueDark"
        android:textSize="@dimen/font13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_title"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/username_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font13"
        android:layout_marginTop="@dimen/dimen32"
        android:layout_marginLeft="@dimen/dimen24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:layout_marginStart="@dimen/dimen24" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="@dimen/dimen312"
        android:layout_height="@dimen/dimen48"
        android:layout_marginTop="@dimen/dimen8"
        android:background="@drawable/edit_text_border_background"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingStart="@dimen/dimen14"
        android:paddingLeft="@dimen/dimen14"
        android:paddingTop="@dimen/dimen14"
        android:paddingBottom="@dimen/dimen14"
        android:layout_marginLeft="@dimen/dimen24"
        android:layout_marginRight="@dimen/dimen24"
        android:textColor="@color/colorBlueDark"
        android:textSize="@dimen/font13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_title"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="Email"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font13"
        android:layout_marginTop="@dimen/dimen32"
        android:layout_marginLeft="@dimen/dimen24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        android:layout_marginStart="@dimen/dimen24" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="@dimen/dimen312"
        android:layout_height="@dimen/dimen48"
        android:layout_marginTop="@dimen/dimen8"
        android:background="@drawable/edit_text_border_background"
        android:fontFamily="@font/poppins_semibold"
        android:hint="ex. john@gmail.com"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/dimen14"
        android:paddingLeft="@dimen/dimen14"
        android:paddingTop="@dimen/dimen14"
        android:paddingBottom="@dimen/dimen14"
        android:layout_marginLeft="@dimen/dimen24"
        android:layout_marginRight="@dimen/dimen24"
        android:textColor="@color/colorBlueDark"
        android:textSize="@dimen/font13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_title"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/password_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/font13"
        android:layout_marginTop="@dimen/dimen32"
        android:layout_marginLeft="@dimen/dimen24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginStart="@dimen/dimen24" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/dimen312"
        android:layout_height="@dimen/dimen48"
        android:layout_marginTop="@dimen/dimen8"
        android:background="@drawable/edit_text_border_background"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dimen14"
        android:paddingLeft="@dimen/dimen14"
        android:paddingTop="@dimen/dimen14"
        android:paddingBottom="@dimen/dimen14"
        android:textColor="@color/colorBlueDark"
        android:textSize="@dimen/font13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_title"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="@dimen/dimen312"
        android:layout_height="@dimen/dimen48"
        android:layout_marginLeft="@dimen/dimen24"
        android:layout_marginTop="@dimen/dimen40"
        android:layout_marginRight="@dimen/dimen24"
        android:layout_marginBottom="@dimen/dimen78"
        android:background="@drawable/background_rounded_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btn_continue_title"
        android:textColor="@color/colorWhitePale"
        android:textSize="@dimen/font16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <ImageView
        android:id="@+id/indicator1"
        android:layout_width="@dimen/dimen142"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen40"
        android:src="@drawable/step1_indicator"
        android:layout_marginBottom="@dimen/dimen8"
        android:layout_marginStart="@dimen/dimen24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue"
        android:layout_marginLeft="@dimen/dimen24" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>